[package]
name = "dinotreedemo"
version = "0.1.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]

[dependencies]
rayon = "1.0.1"
ordered-float = "0.5.0"
compt = "1.2.2"
axgeom = "1.0.1"
dinotree = "0.1.0"
dinotree_alg="0.1.0"
ascii_num = "0.1.2"
dinotree_measure={git="https://github.com/tiby312/dinotree_measure"}